# ICVM-lazy

./: Cargo.toml
src/: lib.rs  main.rs
src/inet/: core.rs  mod.rs  parallel.rs  syntax.rs
src/term/: as_net.rs  definition_book.rs  mod.rs  syntax.rs
